Deployment/Infrastructure/Keycloak/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openidconnect
  namespace: auth
  labels:
    app: openidconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openidconnect
  template:
    metadata:
      labels:
        app: openidconnect
        version: v1
    spec:
      containers:
      - name: openidconnect
        image: quay.io/keycloak/keycloak:21.0.2
        args: ["start"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
