Deployment/Infrastructure/Keycloak/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openidconnect
  namespace: auth
spec:
  selector:
    app: openidconnect
  ports:
  - name: http
    port: 8080
    targetPort: 8080
